# aho-corasick

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  pyproject.toml
ah_search/: __init__.py
examples/: search_single.rs
python-src/ac_search/: __init__.py  util.py
python-src/ah_search/: __init__.py
src/: lib.rs  multi_proc.rs  py_bind.rs  trie.rs
src/trie/: ring_buffer.rs  search.rs
tests/: test_search.py
