[project]
name = "ah-search"
version = "0.1.0"
description = "Aho Corasick algorithm for efficient text searches - implemented in Rust!"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = []

[dependency-groups]
dev = [
    "maturin>=1.10.2",
    "pytest>=9.0.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "ah_search.ah_search_rs"
generate-stubs = true
python-source = "python-src"
