[project]
name = "ac-search"
version = "0.1.0"
description = "Aho Corasick algorithm for efficient text searches - implemented in Rust!"
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = []
authors = [
    { name = "David Stiles Rosselli" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Text Processing",
]

[dependency-groups]
dev = [
    "maturin>=1.10.2,<2",
    "pytest>=9.0.1,<10",
    "ruff==0.14.8",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "ac_search.ac_search_rs"
generate-stubs = true
python-source = "python-src"
features = ["python_bind"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python-src"]

[tool.ruff]
line-length = 80
exclude = [
    ".venv",
    "venv",
    "**/.ipynb_checkpoints",
]

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
